crates/analyzer/tests/snapshots/errors__mut_mistakes.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: cannot modify `self.x`, as it is not mutable
  ┌─ compile_errors/mut_mistakes.fe:5:9
  │
4 │     pub fn f(self) {
  │              ---- consider changing this to be mutable: `mut self`
5 │         self.x = 10 // self not mut
  │         ^^^^^^ not mutable


